src/test/deca/context/valid/avecObjet/class_one_method_int_return.deca
// Description :
//    Classe contenant une méthode retournant un int.
//
// Resultats :
//    OK

class A {
    int f() {
        return 1;
    }
}

{
}

