src/test/deca/context/invalid/inheritance/call_inherited_private_like_not_allowed.deca
// Description :
//    Appel d'une méthode héritée inexistante (simule un accès interdit).
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int f() {
        return 1;
    }
}

class B extends A {
}

{
    B b = new B();
    b.g();
}

